--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,9 +4,10 @@
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
-	<title>Spring Security Example</title>
+	<title>つたじま - ログイン</title>
 	<meta charset="utf-8"></meta>
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"></meta>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
@@ -22,43 +23,113 @@
 			left: 0;
 			right: 0;
 			bottom: 0;
-			background: #aaf;
+			background-image: url(img/tsuta_island001.jpg);
+			background-position: center center;
+			background-repeat: no-repeat;
+			background-attachment: fixed;
+			background-size: cover;
+			background-color: #fff;
+			margin-bottom: 23px;
 		}
 		.container-content {
 			position: absolute;
 			z-index: 1;
-			top: 90%;
+			top: 100%;
 			left: 0;
 			right: 0;
 			width: 100%;
 			min-height: 100%;
-			background: #faa;
+			background: #aaf;
+		}
+		.content-head {
+			position: relative;
+			top: -23px;
+			background: #f00;
+			height: 23px;
+		}
+		.content-body {
+			background: #faf;
+			margin-top: -23px;
+			margin-bottom: 25px;
+		}
+		.content-bottom {
+			position: absolute;
+			z-index: 1;
+			bottom: 0;
+			height: 25px;
+			width: 100%;
+			background: #ff0;
+		}
+		.container-login-form {
+			padding: 20px 50px;
+		}
+		.container-login-form input {
+			opacity: 0.7;
+		}
+		.container-login-form button {
+			opacity: 0.8;
 		}
 	</style>
 </head>
 <body>
 	<div class="container-bottom">
-		<div class="container-login-form">
-			<div th:if="${param.error}">Invalid username and password.</div>
-			<div th:if="${param.logout}">You have been logged out.</div>
-			<form th:action="@{/login/authenticate}" method="post" class="form-horizontal">
-				<div class="form-group">
-					<label for="username">ユーザー名</label>
-					<input type="text" name="username" id="username" class="form-control" placeholder="ユーザー名"/>
+		<div class="container">
+			<div class="row justify-content-end">
+				<div class="col-md-4 col-sd-12">
+					<div class="container-login-form">
+						<div th:if="${param.error}">Invalid username and password.</div>
+						<div th:if="${param.logout}">You have been logged out.</div>
+						<form th:action="@{/login/authenticate}" method="post" class="form-horizontal">
+							<div class="form-group">
+								<label for="username" class="collapse">ユーザー名</label>
+								<input type="text" name="username" id="username" class="form-control" placeholder="ユーザー名"/>
+							</div>
+							<div class="form-group">
+								<label for="password" class="collapse">パスワード</label>
+								<input type="password" name="password" id="password" class="form-control" placeholder="パスワード"/>
+							</div>
+							<div>
+								<button type="submit" class="btn btn-primary">ログイン</button>
+							</div>
+						</form>
+					</div>
 				</div>
-				<div class="form-group">
-					<label for="password">パスワード</label>
-					<input type="password" name="password" id="password" class="form-control" placeholder="パスワード"/>
-				</div>
-				<div>
-					<button type="submit" class="btn btn-primary">ログイン</button>
-				</div>
-			</form>
-		</div>
+			</div>
+		</div>		
 	</div>
 	<div class="container-content">
-		<div class="container-cover">
-		test<br/>test<br/>test<br/>test<br/>test<br/>test<br/>test<br/>test<br/>test<br/>
+		<div class="content-head">
+			<pre>ここは、つたじま</pre>
+		</div>
+		<div class="content-body">
+		<pre>content area
+test
+test
+test
+test
+test
+test
+test
+test
+test
+test
+test
+test
+test
+test
+test
+test
+test
+test
+test
+test
+test
+test
+test
+		</pre>
+		</div>
+		<div class="content-bottom">
+			<pre>bottom of content</pre>
 		</div>
 	</div>
 </body>
